---------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: 18. 8. 2019
  Features:
    - Updated to 0.17 with a new GUI
  Changes:
    - Green fields now require military science packs
    - Forcefields will now not be selected when deconstructing/blueprinting
---------------------------------------------------------------------------------------------------
Version: 2.1.4
Date: 27. 6. 2018
  Bugfixes:
    - Bugfix api call to invalid entity when degrading linked fields
---------------------------------------------------------------------------------------------------
Version: 2.1.3
Date: 16. 5. 2018
  Changes:
    - Soft coding the technology recipes
    - Added compatibility with MoreScience mod by lovely_santa
  Bugfixes:
    - Fixed changelog wasn't showing ingame
---------------------------------------------------------------------------------------------------
Version: 2.1.2
Date: 14. 4. 2018
  Bugfixes:
    - Bugfix api call to invalid entity
---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: 24. 2. 2018
  Changes:
    - Emitters don't build a default wall when placed
  Bugfixes:
    - Bugfix wall not degrading when changing settings too fast
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 1. 2. 2018
  Major Features:
    - Added Forcefield gates
  Features:
    - Added changelog
    - Added ability to disable wall sections
  Changes:
    - Balancing technology cost to reflect the dificulty/OP-ness
    - GUI has sprite buttons on the direction and wall type
    - New on_entity_damaged event as released in 0.16.17
  Bugfixes:
    - Removed quick fix from version 2.0.1 as vanilla game fixed it
    - Fixed the red/green light where not showing when connected to a gate